--- a/css/styles.css
+++ b/css/styles.css
@@ -98,14 +98,27 @@ body {
 .modal-content {
   position: relative;
   background-color: #fefefe;
-  margin: auto;
+  margin: 5px auto;
   padding: 0;
   border: 1px solid #888;
-  width: 120%;
+  width: 80%;
  
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   
 
+}
+
+.modal {
+  display: none;
+  margin: auto;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0);
+  padding-top: 60px;
 }
 
 .shift {
@@ -131,7 +144,12 @@ body {
 
 
 .close {
-  color: floralwhite;
+  color: #000;
+  position: absolute;
+  right: 25px;
+  top: 0;
+  font-size: 35px;
+  font-weight: bold;
 }
 
 .d-flex {
@@ -139,13 +157,107 @@ body {
   
 }
 .picture {
-  width: 120px;
+  width: 100px;
   border-radius: 50px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-right: 10px;
+  
 }
 
 .topic {
   font-weight: bold;
   text-transform: uppercase;
 }
+
+form{
+  border: 3px solid #fefefe;
+
+}
+
+input[type=text],
+input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+
+}
+.close:hover,
+.close:focus{
+  color: red;
+  cursor: pointer;
+}
+
+.animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s;
+}
+
+@-webkit-keyframes animatezoom {
+  from {-webkit-transform: scale(0)}
+  to {-webkit-transform: scale(1)}
+
+}
+
+@keyframes animatezoom {
+  from {transform: scale(0)}
+  to {transform: scale(1);}
+}
+
+button:hover{
+  opacity: 0.8;
+}
+
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+}
+
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+}
+
+img.avatar {
+  width: 40%;
+  border-radius: 50%;
+}
+
+.container {
+  padding: 16px;
+
+}
+span.psw {
+  display: block;
+  float: none
+}
+
+.cancelbtn{
+  width: 100%;
+}
+
+@media screen and (max-width: 300px) {
+  span.psw {
+    display: block;
+    float: none;
+  }
+}
+h2 {
+  text-align: center;
+  padding: 10px;
+  color: #003300;
+}
+
+
+  
+
+
+
+
+
+
+
+
+ 
